--- a/index.html
+++ b/index.html
@@ -165,7 +165,50 @@
     
 
     <main class="container">
+        <div class="section-title"><i class="fas fa-calendar-alt"></i> New Regional & Upcoming Releases</div>
+            <div class="slider-wrapper" id="upcomingWrapper">
+                <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
+                <button class="slider-btn next-btn"><i class="fas fa-chevron-right"></i></button>
+                <div class="slider-track" id="upcomingTrack">
+                    <div class="movie-card">
+                        <div class="poster"><a href="laalo.html"><img src="images/laalo.jpg" alt="Laalo"></a></div>
+                        <div class="card-details"><a href="laalo.html"><strong>Laalo (2024)</strong></a>1080p [Gujarati]</div>
+                    </div>
+                    <div class="movie-card">
+                        <div class="poster"><a href="120bahadur.html"><img src="images/120bahadur.jpg" alt="120 Bahadur"></a></div>
+                        <div class="card-details"><a href="120bahadur.html"><strong>120 Bahadur</strong></a>1080p [Hindi]</div>
+                    </div>
+                    <div class="movie-card">
+                        <div class="poster"><a href="masti4.html"><img src="images/masti4.jpeg" alt="Masti 4"></a></div>
+                        <div class="card-details"><a href="masti4.html"><strong>Masti 4</strong></a>1080p [Hindi]</div>
+                    </div>
+                    <div class="movie-card">
+                        <div class="poster"><a href="bison.html"><img src="images/bison.jpg" alt="Bison"></a></div>
+                        <div class="card-details"><a href="bison.html"><strong>Bison Kaalamaadan</strong></a>1080p [Tamil]</div>
+                    </div>
+                    <div class="movie-card">
+                        <div class="poster"><a href="bengalfiles.html"><img src="images/bengalfiles.jpg" alt="Bengal Files"></a></div>
+                        <div class="card-details"><a href="bengalfiles.html"><strong>The Bengal Files</strong></a>1080p [Hindi]</div>
+                    </div>
+                </div>
+            </div>
          <div id="main-content">
+        <div class="section-title"><i class="fas fa-dragon"></i> Anime Collection</div>
+            <div class="slider-wrapper" id="animeWrapper">
+                <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
+                <button class="slider-btn next-btn"><i class="fas fa-chevron-right"></i></button>
+                <div class="slider-track" id="animeTrack">
+                    <div class="movie-card"><div class="poster"><a href="sololeveling_s1.html"><img src="images/sololeveling_s1.jpg" alt="Solo Leveling S1"></a></div><div class="card-details"><a href="sololeveling_s1.html"><strong>Solo Leveling: Season 1</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="sololeveling_s2.html"><img src="images/sololeveling_s2.jpg" alt="Solo Leveling S2"></a></div><div class="card-details"><a href="sololeveling_s2.html"><strong>Solo Leveling: Season 2</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="demonslayer2025.html"><img src="images/demonslayer2025.jpg" alt="Demon Slayer 2025"></a></div><div class="card-details"><a href="demonslayer2025.html"><strong>Demon Slayer: Infinity Castle</strong></a>1080p [2025]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="aot_s1.html"><img src="images/aot_s1.jpg" alt="AOT S1"></a></div><div class="card-details"><a href="aot_s1.html"><strong>Attack on Titan: Season 1</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="aot_s2.html"><img src="images/aot_s2.jpg" alt="AOT S2"></a></div><div class="card-details"><a href="aot_s2.html"><strong>Attack on Titan: Season 2</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="aot_s3.html"><img src="images/aot_s3.jpg" alt="AOT S3"></a></div><div class="card-details"><a href="aot_s3.html"><strong>Attack on Titan: Season 3</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="aot_s4.html"><img src="images/aot_s4.jpg" alt="AOT The Final Season"></a></div><div class="card-details"><a href="aot_s4.html"><strong>Attack on Titan: The Final Season</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="naruto1.html"><img src="images/naruto1.jpg" alt="Naruto"></a></div><div class="card-details"><a href="naruto1.html"><strong>Naruto (Complete Series)</strong></a>1080p</div></div>
+                </div>
+            </div>
+
         <div class="section-title">
             <i class="fas fa-bolt" style="color: #ffc107;"></i> Marvel Cinematic Universe
         </div>
@@ -740,6 +783,8 @@
         initSlider('spiderVerseWrapper', 'spiderVerseTrack', 900);
         initSlider('dcWrapper', 'dcTrack', 900);       
         initSlider('comedyWrapper', 'comedyTrack', 900);
+        initSlider('animeWrapper', 'animeTrack', 900);
+
     </script>
 
 </body> 
