--- a/index.html
+++ b/index.html
@@ -784,6 +784,7 @@
         initSlider('dcWrapper', 'dcTrack', 900);       
         initSlider('comedyWrapper', 'comedyTrack', 900);
         initSlider('animeWrapper', 'animeTrack', 900);
+        initSlider('upcomingWrapper', 'upcomingTrack', 900);
 
     </script>
 
