--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="slider-track" id="upcomingTrack">
                     <div class="movie-card">
                         <div class="poster"><a href="laalo.html"><img src="images/laalo.jpg" alt="Laalo"></a></div>
-                        <div class="card-details"><a href="laalo.html"><strong>Laalo (2025)</strong></a>1080p [Gujarati]</div>
+                        <div class="card-details"><a href="laalo.html"><strong>Laalo (2024)</strong></a>1080p [Gujarati]</div>
                     </div>
                     <div class="movie-card">
                         <div class="poster"><a href="120bahadur.html"><img src="images/120bahadur.jpg" alt="120 Bahadur"></a></div>
@@ -192,7 +192,24 @@
                     </div>
                 </div>
             </div>
-         <div id="main-content">
+            <div class="section-title"><i class="fas fa-heart"></i> Romance & Drama Collection</div>
+            <div class="slider-wrapper" id="romanceWrapper">
+                <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
+                <button class="slider-btn next-btn"><i class="fas fa-chevron-right"></i></button>
+                <div class="slider-track" id="romanceTrack">
+                    <div class="movie-card"><div class="poster"><a href="ramaiyavastavaiya.html"><img src="images/ramaiyavastavaiya.jpg" alt="Ramaiya Vastavaiya"></a></div><div class="card-details"><a href="ramaiyavastavaiya.html"><strong>Ramaiya Vastavaiya (2013)</strong></a>1080p [Hindi]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="taqdeer.html"><img src="images/taqdeer.jpg" alt="Taqdeer"></a></div><div class="card-details"><a href="taqdeer.html"><strong>Taqdeer (2017)</strong></a>1080p [Hindi+Telugu]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="premalu.html"><img src="images/premalu.jpg" alt="Premalu"></a></div><div class="card-details"><a href="premalu.html"><strong>Premalu (2024)</strong></a>1080p [Hindi+Malayalam]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="dada.html"><img src="images/dada.jpg" alt="Dada"></a></div><div class="card-details"><a href="dada.html"><strong>Dada (2023)</strong></a>1080p [Hindi+Tamil]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="dragon.html"><img src="images/dragon.jpg" alt="Dragon"></a></div><div class="card-details"><a href="dragon.html"><strong>Dragon (2025)</strong></a>1080p [Tamil]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="lovetoday.html"><img src="images/lovetoday.jpg" alt="Love Today"></a></div><div class="card-details"><a href="lovetoday.html"><strong>Love Today (2022)</strong></a>1080p [Hindi+Tamil]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="18pages.html"><img src="images/18pages.jpg" alt="18 Pages"></a></div><div class="card-details"><a href="18pages.html"><strong>18 Pages (2022)</strong></a>1080p [Hindi+Telugu]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="dude.html"><img src="images/dude.jpg" alt="Dude"></a></div><div class="card-details"><a href="dude.html"><strong>Dude (2025)</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="alappuzha.html"><img src="images/alappuzha.jpg" alt="Alappuzha"></a></div><div class="card-details"><a href="alappuzha.html"><strong>Alappuzha Gymkhana</strong></a>1080p [Malayalam]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="hridayam.html"><img src="images/hridayam.jpg" alt="Hridayam"></a></div><div class="card-details"><a href="hridayam.html"><strong>Hridayam (2022)</strong></a>1080p [Malayalam]</div></div>
+                </div>
+            </div>
+        <div id="main-content">
         <div class="section-title"><i class="fas fa-dragon"></i> Anime Collection</div>
             <div class="slider-wrapper" id="animeWrapper">
                 <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
@@ -785,9 +802,9 @@
         initSlider('comedyWrapper', 'comedyTrack', 900);
         initSlider('animeWrapper', 'animeTrack', 900);
         initSlider('upcomingWrapper', 'upcomingTrack', 900);
+        initSlider('romanceWrapper', 'romanceTrack', 900);
 
     </script>
 
 </body> 
 </html>
-
