--- a/index.html
+++ b/index.html
@@ -675,6 +675,7 @@
                     <div class="movie-card"><div class="poster"><a href="dhamaal.html"><img src="images/dhammal.jpg" alt="Dhamaal"></a></div><div class="card-details"><a href="dhamaal.html"><strong>Dhamaal</strong></a>1080p [Hindi]</div></div>
                     <div class="movie-card"><div class="poster"><a href="totaldhamaal.html"><img src="images/totaldhammal.jpeg" alt="Total Dhamaal"></a></div><div class="card-details"><a href="totaldhamaal.html"><strong>Total Dhamaal</strong></a>1080p [Hindi]</div></div>
                     <div class="movie-card"><div class="poster"><a href="padakkalam.html"><img src="images/padakkalam.jpg" alt="Padakkalam"></a></div><div class="card-details"><a href="padakkalam.html"><strong>Padakkalam</strong></a>1080p</div></div>
+                    <div class="movie-card"><div class="poster"><a href="malamaalweekly.html"><img src="images/malamaalweekly.jpg" alt="Malamaal Weekly"></a></div><div class="card-details"><a href="malamaalweekly.html"><strong>Malamaal Weekly</strong></a>1080p</div></div>
                 </div>
             </div>
  
