--- a/index.html
+++ b/index.html
@@ -165,31 +165,71 @@
     
 
     <main class="container">
-        <div class="section-title"><i class="fas fa-calendar-alt"></i> New Regional & Upcoming Releases</div>
-            <div class="slider-wrapper" id="upcomingWrapper">
+        <div class="section-title"><i class="fas fa-fighter-jet"></i> War & Patriotic Collection</div>
+        <div class="slider-wrapper" id="warWrapper">
+            <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
+            <button class="slider-btn next-btn"><i class="fas fa-chevron-right"></i></button>
+            <div class="slider-track" id="warTrack">
+                <div class="movie-card"><div class="poster"><a href="amaran.html"><img src="images/amaran.jpg" alt="Amaran"></a></div><div class="card-details"><a href="amaran.html"><strong>Amaran (2024)</strong></a>1080p [Hindi+Tamil]</div></div>
+                <div class="movie-card"><div class="poster"><a href="uri.html"><img src="images/uri.jpg" alt="URI"></a></div><div class="card-details"><a href="uri.html"><strong>URI: The Surgical Strike</strong></a>1080p [Hindi]</div></div>
+                <div class="movie-card"><div class="poster"><a href="shershaah.html"><img src="images/shershaah.jpg" alt="Shershaah"></a></div><div class="card-details"><a href="shershaah.html"><strong>Shershaah (2021)</strong></a>1080p [Hindi]</div></div>
+                <div class="movie-card"><div class="poster"><a href="sambahadur.html"><img src="images/sambahadur.jpg" alt="Sam Bahadur"></a></div><div class="card-details"><a href="sambahadur.html"><strong>Sam Bahadur (2023)</strong></a>1080p [Hindi]</div></div>
+                <div class="movie-card"><div class="poster"><a href="major.html"><img src="images/major.jpg" alt="Major"></a></div><div class="card-details"><a href="major.html"><strong>Major (2022)</strong></a>1080p [Dual Audio]</div></div>
+                <div class="movie-card"><div class="poster"><a href="parmanu.html"><img src="images/parmanu.jpg" alt="Parmanu"></a></div><div class="card-details"><a href="parmanu.html"><strong>Parmanu (2018)</strong></a>1080p [Hindi]</div></div>
+                <div class="movie-card"><div class="poster"><a href="paltan.html"><img src="images/paltan.jpg" alt="Paltan"></a></div><div class="card-details"><a href="paltan.html"><strong>Paltan (2018)</strong></a>1080p [Hindi]</div></div>
+                <div class="movie-card"><div class="poster"><a href="border.html"><img src="images/border.jpg" alt="Border"></a></div><div class="card-details"><a href="border.html"><strong>Border (1996)</strong></a>1080p [Hindi]</div></div>
+            </div>
+        </div>
+        <div class="section-title"><i class="fas fa-star"></i> Indian Superheroes & Mythic Verse</div>
+        <div class="slider-wrapper" id="indianHeroWrapper">
+            <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
+            <button class="slider-btn next-btn"><i class="fas fa-chevron-right"></i></button>
+            <div class="slider-track" id="indianHeroTrack">
+                <div class="movie-card">
+                    <div class="poster"><a href="hanuman.html"><img src="images/hanuman.jpg" alt="Hanu-Man"></a></div>
+                    <div class="card-details"><a href="hanuman.html"><strong>Hanu-Man (2024)</strong></a>1080p [Hindi+Telugu]</div>
+                </div>
+                <div class="movie-card">
+                    <div class="poster"><a href="lokah.html"><img src="images/lokah.jpg" alt="Lokah Chapter 1"></a></div>
+                    <div class="card-details"><a href="lokah.html"><strong>Lokah Chapter 1</strong></a>1080p [Hindi]</div>
+                </div>
+                <div class="movie-card">
+                    <div class="poster"><a href="narsimha.html"><img src="images/narsimha.jpg" alt="Mahavatar Narsimha"></a></div>
+                    <div class="card-details"><a href="narsimha.html"><strong>Mahavatar Narsimha</strong></a>1080p [Upcoming]</div>
+                </div>
+                <div class="movie-card">
+                    <div class="poster"><a href="brahmastra.html"><img src="images/brahmastra.jpg" alt="Brahmastra"></a></div>
+                    <div class="card-details"><a href="brahmastra.html"><strong>Brahmāstra: Part One</strong></a>1080p [Hindi]</div>
+                </div>
+                <div class="movie-card">
+                    <div class="poster"><a href="mirai.html"><img src="images/mirai.jpg" alt="Mirai"></a></div>
+                    <div class="card-details"><a href="mirai.html"><strong>Mirai (Super Yodha)</strong></a>1080p [Upcoming]</div>
+                </div>
+                <div class="movie-card">
+                    <div class="poster"><a href="bhaveshjoshi.html"><img src="images/bhaveshjoshi.jpg" alt="Bhavesh Joshi"></a></div>
+                    <div class="card-details"><a href="bhaveshjoshi.html"><strong>Bhavesh Joshi Superhero</strong></a>1080p [Hindi]</div>
+                </div>
+                <div class="movie-card">
+                    <div class="poster"><a href="minnalmurali.html"><img src="images/minnalmurali.jpg" alt="Minnal Murali"></a></div>
+                    <div class="card-details"><a href="minnalmurali.html"><strong>Minnal Murali (2021)</strong></a>1080p [Hindi+Malayalam]</div>
+                </div>
+            </div>
+        </div>
+            <div class="section-title"><i class="fas fa-fire"></i> Pan-India Action Blockbusters</div>
+            <div class="slider-wrapper" id="panIndiaWrapper">
                 <button class="slider-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
                 <button class="slider-btn next-btn"><i class="fas fa-chevron-right"></i></button>
-                <div class="slider-track" id="upcomingTrack">
-                    <div class="movie-card">
-                        <div class="poster"><a href="laalo.html"><img src="images/laalo.jpg" alt="Laalo"></a></div>
-                        <div class="card-details"><a href="laalo.html"><strong>Laalo (2024)</strong></a>1080p [Gujarati]</div>
-                    </div>
-                    <div class="movie-card">
-                        <div class="poster"><a href="120bahadur.html"><img src="images/120bahadur.jpg" alt="120 Bahadur"></a></div>
-                        <div class="card-details"><a href="120bahadur.html"><strong>120 Bahadur</strong></a>1080p [Hindi]</div>
-                    </div>
-                    <div class="movie-card">
-                        <div class="poster"><a href="masti4.html"><img src="images/masti4.jpeg" alt="Masti 4"></a></div>
-                        <div class="card-details"><a href="masti4.html"><strong>Masti 4</strong></a>1080p [Hindi]</div>
-                    </div>
-                    <div class="movie-card">
-                        <div class="poster"><a href="bison.html"><img src="images/bison.jpg" alt="Bison"></a></div>
-                        <div class="card-details"><a href="bison.html"><strong>Bison Kaalamaadan</strong></a>1080p [Tamil]</div>
-                    </div>
-                    <div class="movie-card">
-                        <div class="poster"><a href="bengalfiles.html"><img src="images/bengalfiles.jpg" alt="Bengal Files"></a></div>
-                        <div class="card-details"><a href="bengalfiles.html"><strong>The Bengal Files</strong></a>1080p [Hindi]</div>
-                    </div>
+                <div class="slider-track" id="panIndiaTrack">
+                    <div class="movie-card"><div class="poster"><a href="kgf1.html"><img src="images/kgf1.jpg" alt="KGF 1"></a></div><div class="card-details"><a href="kgf1.html"><strong>K.G.F: Chapter 1</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="kgf2.html"><img src="images/kgf2.jpg" alt="KGF 2"></a></div><div class="card-details"><a href="kgf2.html"><strong>K.G.F: Chapter 2</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="salaar.html"><img src="images/salaar.jpg" alt="Salaar"></a></div><div class="card-details"><a href="salaar.html"><strong>Salaar: Part 1</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="bagheera.html"><img src="images/bagheera.jpg" alt="Bagheera"></a></div><div class="card-details"><a href="bagheera.html"><strong>Bagheera (2024)</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="rrr.html"><img src="images/rrr.jpg" alt="RRR"></a></div><div class="card-details"><a href="rrr.html"><strong>RRR (2022)</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="pushpa1.html"><img src="images/pushpa1.jpg" alt="Pushpa 1"></a></div><div class="card-details"><a href="pushpa1.html"><strong>Pushpa: The Rise</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="pushpa2.html"><img src="images/pushpa2.jpg" alt="Pushpa 2"></a></div><div class="card-details"><a href="pushpa2.html"><strong>Pushpa 2: The Rule</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="baahubali1.html"><img src="images/baahubali1.jpg" alt="Baahubali 1"></a></div><div class="card-details"><a href="baahubali1.html"><strong>Baahubali: The Beginning</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="baahubali2.html"><img src="images/baahubali2.jpg" alt="Baahubali 2"></a></div><div class="card-details"><a href="baahubali2.html"><strong>Baahubali 2: The Conclusion</strong></a>1080p [Dual Audio]</div></div>
+                    <div class="movie-card"><div class="poster"><a href="kalki.html"><img src="images/kalki.jpg" alt="Kalki"></a></div><div class="card-details"><a href="kalki.html"><strong>Kalki 2898 AD</strong></a>1080p [Dual Audio]</div></div>
                 </div>
             </div>
             <div class="section-title"><i class="fas fa-heart"></i> Romance & Drama Collection</div>
@@ -804,6 +844,9 @@
         initSlider('animeWrapper', 'animeTrack', 900);
         initSlider('upcomingWrapper', 'upcomingTrack', 900);
         initSlider('romanceWrapper', 'romanceTrack', 900);
+        initSlider('panIndiaWrapper', 'panIndiaTrack', 900);
+        initSlider('indianHeroWrapper', 'indianHeroTrack', 900);
+        initSlider('warWrapper', 'warTrack', 900);
 
     </script>
 
